# quote-server-cpp

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: docker.yaml
api/: quote.proto
include/: dispatcher.h  ring_buffer.h
server/: buffer.h  decimal.h  dispatcher.h  main.cpp  orderbook.cpp  orderbook.h  orderbook.t.cpp  quote_service.cpp  quote_service.h  quote_service.t.cpp  ring_buffer.h  source.cpp  source.h  task_group.cpp  task_group.h  trade.h
server/coinbase/: client.cpp  client.h  decimal.h  full.cpp  full.h  full.t.cpp  orderbook.cpp  orderbook.h  orderbook.t.cpp  subscriptions.cpp  subscriptions.h
